src/components/homeLayout.css
html {
  margin: 0px;
  height: 100%;
  width: 100%;
}

body {
  margin: 0px;
  min-height: 100%;
  min-width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

footer {
  position: fixed;
  bottom: 1em;
  right: 2em;
}


.main-container {
  /* background-color: yellow; */
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}


@media only screen and (min-width: 768px) {
  .main-top-container { flex: 8; display: flex; }
  #___gatsby{ width: 62%; }
}

.main-top-container {
  /* background-color: red; */
  display: flex;
  flex: 8;
}
.main-bot-container {
  /* background-color: yellow; */
  flex: 4;
  padding: 0.5em;
}

.main-top-left-container {
  /* background-color: aqua; */
  flex: 10;
  padding: 0.5em;
}

.main-top-right-container {
  /* background-color: brown; */
  flex: 6;
  display: flex;
  flex-direction: column;
}

.blog-link-container {
  /* background-color: darkslategray; */
  flex: 4;
  padding: 0.5em;
}

.contact-download-container {
  /* background-color: darkturquoise; */
  flex: 4;
  display: flex;
}

.contact-link-container {
  /* background-color: ghostwhite; */
  flex: 4;
  padding: 0.5em;
}

.download-container {
  /* background-color: midnightblue; */
  flex: 4;
  padding: 0.5em;
}

.home-card {
  background-color: white;
  width: 100%;
  height: 100%;
  box-shadow: 5px 10px 10px #888888;
  border-radius: 5px;
}

.home-card:hover {
  background-color: white;
  width: 101%;
  height: 101%;
  box-shadow: 5px 10px 30px #888888;
}

.downloads, .projects, .contacts, .blogs, .profile {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 2%;
}

.profile-img-container {
  width: 10em;
  height: 10em;
  display: inline-block;
  margin: 1em;
}

.profile-img-container > .gatsby-image-wrapper {
  border-radius: 5px;
}

.profile-desc-container {
  text-align: center;
}

.icon-container {
  flex: 6;
  padding-top: 1em;
}

.icon-container-project {
  flex: 6;
  padding-top: 1em;
}

.icon-desc-container {
  flex: 6;
  text-align: center;
  font-size: 0.8em;
}

.main-title-container {
  width: 95%;
  height: 1em;
  background-color: white;
  margin: 0 auto;
  box-shadow: 5px 10px 10px #888888;
  border-radius: 5px;
  margin-bottom: 1em;
}

.main-title {
  font-size: 2em;
  padding: 0.5em;
  color: white;
  margin: 0 auto;
  text-shadow: 2px 2px #888888;
}

